--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>freeCodeCamp</h1>
-    <p>Estoy aprendiendo GitHub</p>
+    <p>Estoy aprendiendo GitHub y mas</p>
   </body>
 </html>
